...
          isPrivate={true}
          action="translate"
          renderTrigger={({ onPress }) => (
            <Button
              className="flex-row items-center justify-center gap-2 px-6 py-4"
              onPress={onPress}
              testID="asset-translate-button"
            >
              <Icon
                as={LockIcon}
                size={20}
                className="text-primary-foreground"
              />
...
