...
              isRecording ||
              isVADRecording ||
              !hasUndoHistory ||
              !currentUndoOperation?.canUndo
            }
            onPress={handleUndoAction}
            testID="recording-undo"
            accessibilityLabel="recording-undo"
          >
            {/* <Icon as={Undo2} size={20} className="text-primary" /> */}
            <Icon as={Undo2} size={20} className="text-primary" />
          </Button>
          <Button
...
              isRecording ||
              isVADRecording ||
              !hasRedoHistory ||
              !currentRedoOperation?.canUndo
            }
            onPress={handleRedoAction}
            testID="recording-redo"
            accessibilityLabel="recording-redo"
          >
            <Icon as={Redo2} size={20} className="text-primary" />
          </Button>
        </View>
        <View className="flex-1 flex-row items-center justify-end gap-3">
...
